vision-demo-2026/demo-scripts/defence/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dd-agents
  labels: {istio.io/dataplane-mode: ambient}
---
apiVersion: v1
kind: Namespace
metadata:
  name: dd-models
  labels: {istio.io/dataplane-mode: ambient}
---
apiVersion: v1
kind: Namespace
metadata:
  name: dd-tools
  labels: {istio.io/dataplane-mode: ambient}
---
apiVersion: v1
kind: Namespace
metadata:
  name: dd-gateway
  labels: {istio.io/dataplane-mode: ambient}
