vision-demo-2026/demo-scripts/defence/05-egress-deny.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata: {name: outside-deny, namespace: dd-agents}
spec:
  targetRefs:
  - {group: gateway.networking.k8s.io, kind: Gateway, name: dd-egress}
  action: DENY
  rules: [{}]
